baseline/policies/constraints/rbac-no-wildcards.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: RbacNoWildcards
metadata:
  name: rbac-no-wildcards
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: ["rbac.authorization.k8s.io"]
        kinds: ["Role"]
    excludedNamespaces:
      - kube-system
      - kube-public
      - kube-node-lease
      - gatekeeper-system
      - argocd
      - monitoring
