baseline/policies/constraints/require-pod-disruption-budget.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: RequirePodDisruptionBudget
metadata:
  name: require-pdb-workloads
spec:
  enforcementAction: warn
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
    namespaces:
      - frontend
      - backend
      - data-access
